tests/build/cases/widget_new/malformed_property_path3.stderr
error: expected `;`
 --> cases/widget_new/malformed_property_path3.rs:6:28
  |
6 |         zero_ui::properties:margin = 0;
  |                            ^

error: missing value
 --> cases/widget_new/malformed_property_path3.rs:6:18
  |
6 |         zero_ui::properties:margin = 0;
  |                  ^^^^^^^^^^
